feat: Documentando recurso de autenticação no Swagger
