# app/Http/Controllers/AuthController.php
@@ -2,12 +2,39 @@
 
 namespace App\Http\Controllers;
 
+use App\Http\Requests\LoginRequest;
+use App\Http\Responses\AccessTokenResponse;
 use Illuminate\Http\Request;
 use Tymon\JWTAuth\Facades\JWTAuth;
 
 class AuthController extends Controller
 {
-    public function login(Request $request) {
+    /**
+     * @OA\Post(
+     *      path="/api/login",
+     *      tags={"Authentication"},
+     *      summary="Log in",
+     *      @OA\RequestBody(
+     *          required=true,
+     *          description="Data for creating a new participant",
+     *          @OA\JsonContent(ref="#/components/schemas/LoginRequest")
+     *      ),
+     *      @OA\Response(
+     *          response="200", 
+     *          description="Token details",
+     *          @OA\JsonContent(ref="#/components/schemas/AccessTokenResponse")
+     *      ),
+     *      @OA\Response(
+     *          response="401", 
+     *          description="Invalid credentials",
+     *          @OA\JsonContent(
+     *              type="object",
+     *              @OA\Property(property="message", type="string", example="Credenciais inválidas.")
+     *      )
+     *  )
+     * )
+     */
+    public function login(LoginRequest $request) {
         $credentials = [
             'email' => $request->email, // Campo personalizado para o login
             'password' => $request->password, // Campo padrão para a senha
@@ -20,25 +47,86 @@ class AuthController extends Controller
         return $this->respondWithToken($token);
     }
     
+    /**
+     * @OA\Get(
+     *     path="/api/me",
+     *     tags={"Authentication"},
+     *     summary="Logged in user data",
+     *     @OA\Response(
+     *          response="200", 
+     *          description="User data",
+     *          @OA\JsonContent(
+     *             type="object",
+     *             @OA\Property(property="USUARIO_ID", type="integer", example=1),
+     *             @OA\Property(property="USUARIO_NOME", type="string", example="Username"),
+     *             @OA\Property(property="USUARIO_EMAIL", type="string", example="example@example.com"),
+     *             @OA\Property(property="USUARIO_CPF", type="string", example="12685963501")
+     *         )
+     *     ),
+     *     @OA\Response(
+     *          response="401", 
+     *          description="Unauthorized",
+     *          @OA\JsonContent(ref="#/components/schemas/ErrorResponse")
+     *     ),
+     *     security={{"bearerAuth":{}}}
+     * )
+     */
     public function me() {
         return response()->json(auth()->user());
     }
     
+    /**
+     * @OA\Post(
+     *     path="/api/logout",
+     *     tags={"Authentication"},
+     *     summary="Logout",
+     *     @OA\Response(
+     *          response="200", 
+     *          description="Logout",
+     *          @OA\JsonContent(
+     *             type="object",
+     *             @OA\Property(property="message", type="integer", example="Logout efetuado com sucesso.")
+     *         )
+     *     ),
+     *     @OA\Response(
+     *          response="401", 
+     *          description="Unauthorized",
+     *          @OA\JsonContent(ref="#/components/schemas/ErrorResponse")
+     *     ),
+     *     security={{"bearerAuth":{}}}
+     * )
+     */
     public function logout() {
         auth()->logout();
     
         return response()->json(['message' => 'Logout efetuado com sucesso!']);
     }
     
+    /**
+     * @OA\Post(
+     *     path="/api/refresh-token",
+     *     tags={"Authentication"},
+     *     summary="Refresh the access token",
+     *     @OA\Response(
+     *          response="200", 
+     *          description="Token details",
+     *          @OA\JsonContent(ref="#/components/schemas/AccessTokenResponse")
+     *     ),
+     *     @OA\Response(
+     *          response="401", 
+     *          description="Unauthorized",
+     *          @OA\JsonContent(ref="#/components/schemas/ErrorResponse")
+     *     ),
+     *     security={{"bearerAuth":{}}}
+     * )
+     */
     public function refresh() {
         return $this->respondWithToken(auth()->refresh());
     }
     
     protected function respondWithToken($token) {
-        return response()->json([
-            'access_token' => $token,
-            'token_type' => 'bearer',
-            'expires_in' => auth('api')->factory()->getTTL() * 60
-        ]);
+        $tokenData = new AccessTokenResponse($token);
+
+        return $tokenData->toResponse();
     }
 }
